objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>CASESAFEID(Order.AccountId)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalStatus__c</fullName>
        <label>Approval Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Under Revision</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <isActive>false</isActive>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                    <isActive>false</isActive>
                    <label>Recalled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ATPStatus__c</fullName>
        <label>ATP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Partially Confirmed</fullName>
                </value>
                <value>
                    <fullName>Fully Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AccountManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Account)</relationshipLabel>
        <relationshipName>Order_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_AlternateProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field captures the Alternative product for the current product in case the current product is unavailable</description>
        <label>Alternate Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CallPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_CombineInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Combine Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConfirmedQuantity__c</fullName>
        <label>Confirmed Quantity</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ContractType__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>FPD</fullName>
                </value>
                <value>
                    <fullName>FPD Ex-Space</fullName>
                </value>
                <value>
                    <fullName>Priced</fullName>
                </value>
                <value>
                    <fullName>Priced Ex-Space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Currency__c</fullName>
        <description>This field indicates the Currency type</description>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DefaultBillingBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field Captures default Billing Block</description>
        <inlineHelpText>Default Billing block value</inlineHelpText>
        <label>Default Billing Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DefaultDeliveryBlock__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field Captures default Delivery Block</description>
        <inlineHelpText>Default delivery block value</inlineHelpText>
        <label>Default Delivery Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_DeferredPrice__c</fullName>
        <description>This field captures the deferred price</description>
        <inlineHelpText>This field captures the deferred price</inlineHelpText>
        <label>Deferred Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Destination__c</fullName>
        <description>This field captures destination</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the destination for the order</inlineHelpText>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Discount__c</fullName>
        <label>Price Adjustments</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Discounts__c</fullName>
        <label>Discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstFreightPrice__c</fullName>
        <label>Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_EstimatedShipmentDate__c</fullName>
        <description>This field is to store the Estimated Delivery Date which will be received as part of 066I and will be stored in the Mosaic Direct Delivery Dashboard.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimated Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExSpaceIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field captures the ex space indicator of the Order product.</description>
        <inlineHelpText>This field captures the ex space indicator of the Order product.</inlineHelpText>
        <label>Ex Space Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExchangeRate__c</fullName>
        <description>This field captures the exchange rate of the Order product</description>
        <inlineHelpText>This field captures the exchange rate of the Order product</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ExpectedDeliveryDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FPDPricefromPriceFx__c</fullName>
        <description>Created as part of GDASF-9360. This field captures the FPD price from Price Fx.</description>
        <inlineHelpText>The FPD List Price for the Order Product is only relevant when the contract type of the product is specified as FPD</inlineHelpText>
        <label>FPD List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalAgreedPrice__c</fullName>
        <description>This field is will store the Final Agreed Price and send it back to SAP after the Order is placed.</description>
        <label>Final Agreed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FinalPrice__c</fullName>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_FixedPaymentDueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fixed Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Floorplusfreight__c</fullName>
        <formula>PMC_CPQ_Floorprice__c + PMC_CPQ_EstFreightPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Floor Price + Freight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Floorprice__c</fullName>
        <description>This is as per the US 2921</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Incoterms__c</fullName>
        <description>This field captures the user input for Incoterms.</description>
        <label>Incoterms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_Incoterms1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_LinePONumber__c</fullName>
        <description>This field will be used to capture the PO Number at a order line level - leveraged in the Contract Document forms for North America</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Purchase Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ListPrice__c</fullName>
        <description>This field is to capture the List Price from SAP and Store it in the standard List Price field using flow on Create.</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ModeofTransportation__c</fullName>
        <description>This field captures the Mode of Transportation value.</description>
        <inlineHelpText>Mode of Transportation for this order line</inlineHelpText>
        <label>Mode of Transportation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_MoT</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_NetTotalPrice__c</fullName>
        <label>Net Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderItemIntegrationMessage__c</fullName>
        <description>The Integration message of external callout.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderItemIntegrationStatus__c</fullName>
        <description>This field captures the integration status of the Order product</description>
        <inlineHelpText>This field captures the integration status of the Order product</inlineHelpText>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderLineID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line ID</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products (Order Line ID)</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderLineStatus__c</fullName>
        <label>Order Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Completely Shipped</fullName>
                    <isActive>false</isActive>
                    <label>Completely Shipped</label>
                </value>
                <value>
                    <fullName>Partially Shipped</fullName>
                    <isActive>false</isActive>
                    <label>Partially Shipped</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_OrderStatus__c</fullName>
        <formula>TEXT(Order.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is to show the owner of the respective order.</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Order_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PackageType__c</fullName>
        <description>The Packaging Type of the Product added to the quote.</description>
        <label>Packaging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_PackagingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentDueDate__c</fullName>
        <description>This field captures Payment Due date .</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Payment Due Date.</inlineHelpText>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PaymentTerms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Against Documents</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 5 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 7 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 10 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 15 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 30 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 45 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Doc - 60 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 90 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 120 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Cash Against Documents - 180 Days From BL</fullName>
                </value>
                <value>
                    <fullName>Prepayment</fullName>
                </value>
                <value>
                    <fullName>Net 1 Day - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 2 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 3 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>05 Days - Document Lock Date</fullName>
                </value>
                <value>
                    <fullName>Net 7 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 10 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 14 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 15 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 17 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 21 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 28 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 29 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 30 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 31 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 35 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 42 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days - From Invoicing Date</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days - From Invoicing Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PriceByDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Price By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_PricingDate__c</fullName>
        <description>This field captures Pricing date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the pricing date</inlineHelpText>
        <label>Price by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Location</label>
        <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ProductSKU__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product SKU</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ReasonOfRejectionOfItem__c</fullName>
        <description>This field indicates the Reason of Rejection of the Order</description>
        <label>Reason Of Rejection Of Item</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cust Initiated - Ordering Error</fullName>
                </value>
                <value>
                    <fullName>Cancellation Contract Expired</fullName>
                </value>
                <value>
                    <fullName>Supply/Availability</fullName>
                </value>
                <value>
                    <fullName>Rejected by workflow</fullName>
                </value>
                <value>
                    <fullName>Cust Initiated - Price Dispute</fullName>
                </value>
                <value>
                    <fullName>Volume low by Agronomic adjustments</fullName>
                </value>
                <value>
                    <fullName>CSR Initiated - Order Entry Error</fullName>
                </value>
                <value>
                    <fullName>Credit Management</fullName>
                </value>
                <value>
                    <fullName>Open Acct. vs Pre-Pay</fullName>
                </value>
                <value>
                    <fullName>Contract Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Shipment Diverted - Mosaic Request</fullName>
                </value>
                <value>
                    <fullName>Shipment Diverted - Customer Request</fullName>
                </value>
                <value>
                    <fullName>Carrier change</fullName>
                </value>
                <value>
                    <fullName>DH Cancellation</fullName>
                </value>
                <value>
                    <fullName>B2B Order Rejected</fullName>
                </value>
                <value>
                    <fullName>Canpotex Rejection</fullName>
                </value>
                <value>
                    <fullName>Order cannot be fulfilled</fullName>
                </value>
                <value>
                    <fullName>Reshipment</fullName>
                </value>
                <value>
                    <fullName>Diversion to New Customer</fullName>
                </value>
                <value>
                    <fullName>Deleted from SFDC via Amendment</fullName>
                </value>
                <value>
                    <fullName>Due to Complementary Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedDeliveryDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_RequestedShipDate__c</fullName>
        <description>This field captures the Requested ship date of the order product.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field captures the Requested ship date of the order product.</inlineHelpText>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderID__c</fullName>
        <description>This Field is used to capture the relevant Order ID in SAP System.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Order ID in SAP System.</inlineHelpText>
        <label>SAP Order ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPOrderLineID__c</fullName>
        <description>This Field is used to capture the relevant Order Line ID in SAP System.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Order Line ID in SAP System</inlineHelpText>
        <label>SAP Order Line ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ServiceRenderedDate__c</fullName>
        <description>This field captures the Service Rendered Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Service Rendered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Ship To)</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Shipping Address of the Ship to Account associated.</description>
        <label>Shipping Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingInstructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ShippingType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SoldtoAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Products (Sold to Account)</relationshipLabel>
        <relationshipName>Order_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalAvailableQuantity__c</fullName>
        <description>This field captures the remaining quantity out of the total contracted quantity. This quantity will be assigned to the the Subscription Total Available quantity.</description>
        <label>Total Available Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalConsumedQuantity__c</fullName>
        <description>This field is to show the quantity that will be shipped/consumed from the contracted quantity.</description>
        <label>Total Consumed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalContractedQuantity__c</fullName>
        <description>This field is to show the total quantity contracted.</description>
        <label>Total Contracted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_TotalOrderedQuantity__c</fullName>
        <description>This field captures the quantity consumed/ordered from the total contracted quantity. This quantity will be assigned to the the Subscription Total Ordered quantity.</description>
        <label>Total Ordered Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UnitOfMeasure__c</fullName>
        <label>Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_CallPriceRequestedBySystem__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Price Requested By System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_CustomerCallPriceDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Call Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_ItemNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ProtocolIdentifier__c</fullName>
        <description>This field will store the protocol ID for 3rd party scenario in SAP defined from I203 and will be linked to the sales order as part of I066 Interface update.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Protocol Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_RequestNumber__c</fullName>
        <description>This field will be used in I066 and I203 to establish the relation between the request number for scheduling order and sales order</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_DH_ShippedQuantity__c</fullName>
        <label>Shipped Quantity</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccountUOMConvertedQuantity__c</fullName>
        <description>DO NOT USE</description>
        <label>Account UOM Converted Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
        <description>Field to specify quantity in account&apos;s UOM</description>
        <formula>IF(  AND( 
         OR( Order.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
             Order.Account.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
             TEXT( PMC_CPQ_UnitOfMeasure__c )  ==  Order.Account.PMC_SS_UnitofMeasure__r.Name), 
     Quantity  , 
     IF( AND(TEXT( PMC_CPQ_UnitOfMeasure__c ) = &apos;MTN&apos;, Order.Account.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         Quantity  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(TEXT( PMC_CPQ_UnitOfMeasure__c ) = &apos;STN&apos;, Order.Account.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
             Quantity * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
             0) ) )</formula>
        <label>Quantity (Account’s UoM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to unit of measure object.</description>
        <label>Unit of Measure1</label>
        <referenceTo>UnitOfMeasure</referenceTo>
        <relationshipLabel>Order Lines</relationshipLabel>
        <relationshipName>Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Text( Product2.PMC_CPQ_ProductFamily__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order product is activated.</description>
        <inlineHelpText>When enabled, activates the order</inlineHelpText>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset created from this order product</description>
        <inlineHelpText>Asset created from this order product</inlineHelpText>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>OrderProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets
            you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
</CustomObject>